--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pg": "^8.13.0"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.11.0",
     "@typescript-eslint/typescript-estree": "^8.0.0",
@@ -49,6 +50,7 @@
     "prettier": "^3.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.7.0",
+    "typescript-eslint": "^8.56.0",
     "vitest": "^3.0.0"
   }
 }
