refactor: remove cloud module references from public CLI
Strip cloud/agent imports from index.ts, remove pgfence-agent
binary entry, exclude cloud tests from vitest and eslint configs.
The public CLI now uses analyze() directly.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "pgfence": "dist/index.js",
-    "pgfence-agent": "dist/agent/index.js"
+    "pgfence": "dist/index.js"
   },
   "scripts": {
     "dev": "tsx watch src/index.ts",
