--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,14 @@ jobs:
         node-version: [20, 22]
     steps:
       - uses: actions/checkout@v4
+      - name: Block cloud/agent files from public repo
+        run: |
+          LEAKED=$(git ls-files -- 'src/cloud/' 'src/agent/' 'tests/cloud/' | head -5)
+          if [ -n "$LEAKED" ]; then
+            echo "::error::Cloud/agent files detected in tracked files:"
+            echo "$LEAKED"
+            exit 1
+          fi
       - uses: pnpm/action-setup@v4
         with:
           version: 9
