--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pgfence",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Postgres migration safety CLI — lock mode analysis, risk scoring, and safe rewrite recipes",
   "type": "module",
   "main": "dist/index.js",
@@ -21,7 +21,9 @@
     "dist",
     "src",
     "!src/cloud",
-    "!src/agent"
+    "!src/agent",
+    "!dist/cloud",
+    "!dist/agent"
   ],
   "keywords": [
     "postgres",
