--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pgfence",
-  "version": "0.1.1",
+  "name": "@flvmnt/pgfence",
+  "version": "0.1.0",
   "description": "Postgres migration safety CLI — lock mode analysis, risk scoring, and safe rewrite recipes",
   "type": "module",
   "main": "dist/index.js",
