fix: use scoped package name in action and init hook
npx was referencing unscoped `pgfence` instead of `@flvmnt/pgfence`,
which would install the wrong (or nonexistent) package in CI and
git hooks.

--- a/action.yml
+++ b/action.yml
@@ -46,4 +46,4 @@ runs:
           ARGS="$ARGS --stats-file ${{ inputs.stats-file }}"
         fi
         
-        npx --yes pgfence analyze $ARGS
+        npx --yes @flvmnt/pgfence analyze $ARGS
