--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "libpg-query": "^16.0.0",
     "pg": "^8.13.0"
   },
+  "optionalDependencies": {
+    "@iarna/toml": "^2.2.5"
+  },
   "devDependencies": {
     "@eslint/js": "^9.0.1",
     "@types/node": "^20.0.0",
